# llm

./: README.md  pyproject.toml
gpt/: data.py  inference.py  model.py  tokenizer.py  train.py
gpt/sft/: collate.py  data.py  loss.py  run_sft.py  train_sft.py
