[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm"
version = "0.1.0"
description = "Train an LLM from scratch"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "torch>=2.0",
]

[tool.setuptools.packages.find]
include = ["gpt*"]
